# dappforce-substrate-multisig

./: .gitignore  README.md
multisig-front-end/: README.md  package.json  tsconfig.json
multisig-node/: .gitignore  Cargo.toml  README.md  build.rs  clean.sh  run.sh
multisig-node/pallets/df-multisig/: Cargo.toml
multisig-node/pallets/df-multisig/src/: functions.rs  lib.rs  mock.rs  tests.rs
multisig-node/runtime/: Cargo.toml  build.rs
multisig-node/runtime/src/: lib.rs  mock.rs  tests.rs  wallet.rs
multisig-node/runtime/wasm/: Cargo.toml  build.sh
multisig-node/runtime/wasm/src/: lib.rs
multisig-node/src/: chain_spec.rs  main.rs  service.rs
