[lib]
crate-type = ['cdylib']

[workspace]
members = []
[profile.release]
lto = true
panic = 'abort'

[features]
default = []
std = ['multisig-subwallet-runtime/std']
[dependencies.multisig-subwallet-runtime]
default-features = false
path = '..'

[package]
authors = ['Parity Technologies <admin@parity.io>']
edition = '2018'
name = 'multisig-subwallet-runtime-wasm'
version = '1.0.0'
