[lib]
crate-type = ['cdylib']

[workspace]
members = []
[profile.release]
lto = true
panic = 'abort'

[features]
default = []
std = ['df-multisig-runtime/std']
[dependencies.df-multisig-runtime]
default-features = false
path = '..'

[package]
authors = ['DappForce (dadppforce.io)']
edition = '2018'
name = 'df-multisig-runtime-wasm'
version = '1.0.0'
